@@ -10,45 +10,51 @@ import org.cirdles.topsoil.app.util.Alerter;
 import org.cirdles.topsoil.app.util.ErrorAlerter;
 
 import java.text.DecimalFormat;
+import java.text.NumberFormat;
 
 /**
- * Created by benjaminmuldrow on 7/27/16.
+ * A customized <tt>TableCell</tt> used to display data. The String representation of the data is formatted, and all
+ * events pertaining to the editing of a cell are handled here.
+ *
+ * @author benjaminmuldrow
+ *
+ * @see TableCell
+ * @see TopsoilTable
  */
 public class TopsoilTableCell extends TableCell<TopsoilDataEntry, Double> {
 
     private TextField textField;
     private Alerter alerter;
+    private NumberFormat df;
 
-    public TopsoilTableCell() {
+    /**
+     * Constructs a new TopsoilTableCell. The NumberFormat is introduced, as well as specific KeyEvents handled and a
+     * context menu supplied.
+     */
+    TopsoilTableCell() {
         super();
 
         this.setFont(Font.font("Monospaced"));
         this.setAlignment(Pos.TOP_RIGHT);
 
+        this.df = DecimalFormat.getNumberInstance();
+        this.df.setMinimumFractionDigits(9);
+        this.df.setMaximumFractionDigits(9);
+
         this.alerter = new ErrorAlerter();
 
-        // Handle key press events
+        //Handle key press events
         this.setOnKeyPressed(keyEvent -> {
-
             // confirm change
-            if (keyEvent.getCode() == KeyCode.ENTER ||
-                    keyEvent.getCode() == KeyCode.TAB) {
+            if (keyEvent.getCode() == KeyCode.ENTER) {
 
-                // Make sure entry is valid
-                Double newVal = getNumber(textField);
-                if (newVal != null) {
-                    double oldVal = this.getItem();
-                    commitEdit(newVal);
-                    updateItem(newVal, textField.getText().isEmpty());
-                    addUndo(oldVal, newVal);
-                } else {
-                    cancelEdit();
-                    alerter.alert("Entry must be a number");
-                }
+                attemptToCommitEdit();
+                selectNextCell();
 
-            // cancel change
+                // cancel change
             } else if (keyEvent.getCode() == KeyCode.ESCAPE) {
                 cancelEdit();
+                selectNextCell();
             }
 
             keyEvent.consume();
@@ -61,48 +67,29 @@ public class TopsoilTableCell extends TableCell<TopsoilDataEntry, Double> {
         });
     }
 
+    /** {@inheritDoc} */
     @Override
     public void startEdit() {
         super.startEdit();
         generateTextField();
-        this.setText(null);
-        this.textField.setText(getItem().toString());
-        this.setGraphic(this.textField);
+        this.setText(null);                             // Sets the cell's text to null
+        this.textField.setText(getItem().toString());   // Puts the data value into the TextField
+        this.setGraphic(this.textField);                // Sets the TextField as the cell's graphic
         this.textField.selectAll();
     }
 
+    /** {@inheritDoc} */
     @Override
     public void cancelEdit() {
         super.cancelEdit();
-        DecimalFormat df = new DecimalFormat();
-        df.setMinimumFractionDigits(9);
-        df.setMaximumFractionDigits(9);
-        this.setText(df.format(getItem()));
+        this.setText(df.format(this.getItem()));
         this.setGraphic(null);
     }
 
-    public void addUndo(Double oldVal, Double newVal) {
-
-        // Only create undoable command if value was changed.
-        if (Double.compare(this.getItem(), newVal) != 0) {
-            TopsoilTableCellEditCommand cellEditCommand =
-                    new TopsoilTableCellEditCommand(this,
-                            this.getItem(), newVal);
-            ((TopsoilTabPane) this.getScene()
-                    .lookup("#TopsoilTabPane")).getSelectedTab()
-                    .addUndo(cellEditCommand);
-        }
-
-        super.commitEdit(newVal);
-    }
-
+    /** {@inheritDoc} */
     @Override
     public void updateItem(Double item, boolean isEmpty) {
         super.updateItem(item, isEmpty);
-
-        DecimalFormat df = new DecimalFormat();
-        df.setMinimumFractionDigits(9);
-        df.setMaximumFractionDigits(9);
 
         if (isEmpty) {
             setText(null);
@@ -110,56 +97,88 @@ public class TopsoilTableCell extends TableCell<TopsoilDataEntry, Double> {
         } else {
             if (isEditing()) {
                 if (textField != null) {
-                    textField.setText(df.format(getItem()));
-                    setText(null);
-                    setGraphic(textField);
+                    textField.setText(this.getItem().toString());
                 }
+                setText(null);
+                setGraphic(this.textField);
             } else {
-                setText(df.format(getItem()));
+                setText(this.df.format(getItem()));
                 setGraphic(null);
             }
         }
     }
 
     /**
-     * create a text field to be used to edit cell value
+     * Creates an undoable <tt>Command</tt> for a value change, then adds it to the <tt>UndoManager</tt>.
+     *
+     * @param oldVal    the old Double data value
+     * @param newVal    the new Double data value
+     */
+    private void addUndo(Double oldVal, Double newVal) {
+        TableCellEditCommand cellEditCommand = new TableCellEditCommand(this, oldVal, newVal);
+        ((TopsoilTabPane) this.getScene().lookup("#TopsoilTabPane")).getSelectedTab().addUndo(cellEditCommand);
+    }
+
+    /**
+     * Create a text field to be used to edit cell value.
      */
     private void generateTextField() {
         this.textField = new TextField();
         this.textField.setFont(Font.font("Monospaced"));
         this.textField.setMinWidth(this.getWidth() - this.getGraphicTextGap() * 2);
-        this.textField.focusedProperty().addListener((observable, oldValue, newValue) -> {
-            // if new value contains non-numerics or is empty
-            if (!newValue) {
-                double oldVal = this.getItem();
-                commitEdit(getNumber(this.textField));
-                addUndo(oldVal, this.getItem());
-            }
-        });
     }
 
     /**
-     * get the number contained in a textfield
-     * @param textField textfield to be searched
-     * @return Double value of contents or null if invalid entry
+     * Attempts to commit an edit. If the input is invalid, or if the value is the same as it was previously, the
+     * edit is cancelled.
      */
-    private Double getNumber(TextField textField) {
-        Double result = null;
+    private void attemptToCommitEdit() {
         try {
-            result = new Double(textField.getText());
+            Double newVal = Double.valueOf(textField.getText());
+            if (Double.compare(this.getItem(), newVal) != 0) {
+                commitEdit(newVal);
+                addUndo(this.getItem(), newVal);
+            } else {
+                cancelEdit();
+            }
+            selectNextCell();
         } catch (NumberFormatException e) {
-            //
-        } finally {
-            return result;
+            alerter.alert("Entry must be a number.");
+            cancelEdit();
         }
     }
 
-    public TopsoilDataEntry getDataEntry() {
+    /**
+     * Returns the <tt>TopsoilDataEntry</tt> that the data in the cell belongs to.
+     *
+     * @return  TopsoilDataEntry
+     */
+    TopsoilDataEntry getDataEntry() {
         return this.getTableView().getItems().get(this.getIndex());
     }
 
-    public int getColumnIndex() {
+    /**
+     * Returns the index of the column this cell belongs to.
+     *
+     * @return  int column index
+     */
+    int getColumnIndex() {
         return Integer.parseInt(this.getTableColumn().getId());
+    }
+
+    /**
+     * Selects the next logical cell, depending on the button pressed. If the user presses Tab, the next cell to the
+     * right and down is selected. If the user presses Shift+Tab, the next cell to the left and up is selected.
+     */
+    private void selectNextCell() {
+        if (this.getColumnIndex() == this.getTableView().getColumns().size() - 1) {
+            if (this.getIndex() != this.getTableView().getItems().size() - 1)
+                this.getTableView().getSelectionModel().select(this.getIndex() + 1,
+                                                               this.getTableView().getColumns().get(0));
+        } else {
+            this.getTableView().getSelectionModel().select(this.getIndex(), this.getTableView().getColumns()
+                                                                                .get(this.getColumnIndex() + 1));
+        }
     }
 
 }
